--- a/starter/client/.env
+++ b/starter/client/.env
@@ -1,3 +1,3 @@
-REACT_APP_AUTH0_DOMAIN=...
-REACT_APP_AUTH0_CLIENT_ID=...
-REACT_APP_API_ENDPOINT=...
+REACT_APP_AUTH0_DOMAIN=dev-p7lj87noc1cmlkju.us.auth0.com
+REACT_APP_AUTH0_CLIENT_ID=9PWJYCf7G76KPM94mwZy0Ea190J9KI3G
+REACT_APP_API_ENDPOINT=https://60z30lyzl7.execute-api.us-east-1.amazonaws.com/dev
