--- a/starter/backend/package.json
+++ b/starter/backend/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^8.5.1",
     "serverless-iam-roles-per-function": "^3.2.0",
     "serverless-offline": "^14.3.2",
+    "serverless-reqvalidator-plugin": "^3.1.0",
     "uuid": "^9.0.1",
     "winston": "^3.14.2"
   }
