--- a/starter/backend/serverless.yml
+++ b/starter/backend/serverless.yml
@@ -7,6 +7,7 @@ service: serverless-todo-app
 plugins:
   - serverless-iam-roles-per-function
   - serverless-offline
+  - serverless-reqvalidator-plugin
 
 provider:
   name: aws
@@ -71,6 +72,9 @@ functions:
           path: todos
           cors: true
           authorizer: Auth
+          request:
+            schemas:
+              application/json: ${file(src/request/CreateValidation.json)}
     iamRoleStatements:
       - Effect: Allow
         Action:
@@ -91,6 +95,9 @@ functions:
           path: todos/{todoId}
           cors: true
           authorizer: Auth
+          request:
+            schemas:
+              application/json: ${file(src/request/UpdateValidation.json)}
     iamRoleStatements:
       - Effect: Allow
         Action:
@@ -163,6 +170,13 @@ resources:
           gatewayresponse.header.Access-Control-Allow-Methods: "'OPTIONS, GET, POST, PUT, DELETE'"
         ResponseType: DEFAULT_4XX
         RestApiId: !Ref ApiGatewayRestApi
+    RequestBodyValidator:
+      Type: AWS::ApiGateway::RequestValidator
+      Properties:
+        Name: 'request-body-validator'
+        RestApiId: !Ref ApiGatewayRestApi
+        ValidateRequestBody: true
+        ValidateRequestParameters: false
 
     myTodosTable:
       Type: AWS::DynamoDB::Table
